--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h1>Frequência da Voz</h1>
+  <h1>Projeto BA - DI</h1>
   <input type="text" id="syllableInput" placeholder="Digite sílabas sem vírgulas">
   <button onclick="speakSyllables()">Ler</button>
   <label for="volumeInput">Volume:</label>
